# JustAGame

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Session.vim  TODO.md  TODO.txt  basic_client.cpp  basic_server.cpp  client.ini  server.ini
Client/include/: AGameClient.hh  KeyBinding.hh  MainMenu.hh  ServerMenu.hh  StatusBar.hh  Test.hh  Titlebar.hh
Client/src/: AGameClient.cpp  MainMenu.cpp  ServerMenu.cpp  StatusBar.cpp  Test.cpp  Titlebar.cpp  client.cpp
Client/src/RudeConfig/: ParserJuly2004.cpp
GUI/include/: CheckBox.hh  Drawable.hh  DrawableManager.hh  EventCallback.hh  EventManager.hh  Input.hh  Item.hh  Layer.hh  ListBox.hh  ListItem.hh  Menu.hh  ModalMessageBox.hh  Ressource.hh  Screen.hh  Scroller.hh  Sprite.hh  String.hh  StringArea.hh  Table.hh  Theme.hh  Tooltip.hh  jag.hh
GUI/include/Utility/: Graphic.hh
GUI/src/: Action.cpp  CheckBox.cpp  Drawable.cpp  DrawableManager.cpp  EventCallback.cpp  EventManager.cpp  Input.cpp  Item.cpp  Layer.cpp  ListBox.cpp  ListItem.cpp  Menu.cpp  ModalMessageBox.cpp  Screen.cpp  Scroller.cpp  Sprite.cpp  String.cpp  StringArea.cpp  Table.cpp  Tooltip.cpp  jag.cpp
GUI/src/Utility/: Graphic.cpp
GUI/src/Win32/: Win32.cpp
Games/TicTacToe/: CMakeLists.txt
Games/TicTacToe/client/include/: Game.hh  GameClient.hh  PlayerClient.hh
Games/TicTacToe/client/src/: Game.cpp  GameClient.cpp  PlayerClient.cpp
Games/TicTacToe/include/: TTTProtocol.hh
Games/TicTacToe/server/include/: GameServer.hh  PlayerServer.hh
Games/TicTacToe/server/src/: GameServer.cpp  PlayerServer.cpp
Games/client/include/: AGameClient.hh  ChatBox.hh
Games/client/src/: AGameClient.cpp  ChatBox.cpp
Games/include/client/: AGameClient.hh
Games/include/server/: AGameServer.hh
Games/server/include/: AGameServer.hh
Games/server/src/: AGameServer.cpp
Games/src/client/: AGameClient.cpp
Games/src/server/: AGameServer.cpp
LibraryLoader/include/Unix/: LibraryLoader.hh
LibraryLoader/include/Win32/: LibraryLoader.hh
LibraryLoader/src/Unix/: LibraryLoader.cpp
LibraryLoader/src/Win32/: LibraryLoader.cpp
Network/include/: Client.hh  Network.hh  Player.hh  Protocol.hh  ProtocoledPacket.hh
Network/src/: Client.cpp  Network.cpp  Player.cpp  ProtocoledPacket.cpp
SimpleIni/: SimpleIni.hpp
client/include/: AGameClient.hh  About.hh  Background.hh  GameLayer.hh  Input.hh  InputLayer.hh  MainMenu.hh  MainMenuItem.hh  Multimedia.hh  OSSpecific.hh  ServerMenu.hh  StatusBar.hh
client/src/: AGameClient.cpp  About.cpp  GameLayer.cpp  Input.cpp  InputLayer.cpp  KeyBinding.cpp  MainMenu.cpp  MainMenuItem.cpp  Multimedia.cpp  ServerMenu.cpp  StatusBar.cpp  Test.cpp  Titlebar.cpp  client.cpp
include/: Background.hh  KeyBinding.hh  MainMenu.hh  ServerMenu.hh  Setting.hh  StatusBar.hh  Test.hh  Titlebar.hh  jag.hh
include/Aurora/: Config.hpp  Dispatch.hpp  Meta.hpp  Range.hpp  SmartPtr.hpp  Tools.hpp
include/Aurora/Dispatch/: DoubleDispatcher.hpp  Rtti.hpp  SingleDispatcher.hpp
include/Aurora/Meta/: Preprocessor.hpp  Templates.hpp  Tuple.hpp
include/Aurora/Range/: Factories.hpp  Range.hpp  RangeIterator.hpp  Traversal.hpp
include/Aurora/SmartPtr/: CopiedPtr.hpp  MakeUnique.hpp  PtrFunctors.hpp
include/Aurora/Tools/: Exceptions.hpp  ForEach.hpp  Hash.hpp  NamedTuple.hpp  SafeBool.hpp  (+2 more)
include/Client/: About.hh  Background.hh  GameLayer.hh  GameManager.hh  InputLayer.hh  MainMenu.hh  MainMenuItem.hh  Multimedia.hh  ServerMenu.hh  StatusBar.hh  Titlebar.hh
include/GUI/: Action.hh  ChatBox.hh  CheckBox.hh  Console.hh  Container.hh  Drawable.hh  DrawableManager.hh  EventCallback.hh  EventManager.hh  GameManager.hh  HorizontalMenu.hh  Input.hh  Item.hh  Layer.hh  ListBox.hh  ListItem.hh  Menu.hh  MessageBox.hh  ModalMessageBox.hh  Screen.hh  Scroller.hh  Sprite.hh  String.hh  StringArea.hh  Table.hh  Text.hh  Theme.hh  Tooltip.hh  VerticalMenu.hh  jag.hh
include/Network/: APlayer.hh  Client.hh  Network.hh  Protocol.hh  ProtocoledPacket.hh
include/Screen/: HorizontalMenu.hh  Item.hh  Layer.hh  Menu.hh  Screen.hh  Text.hh  Theme.hh
include/System/: LibraryLoader.hh  System.hh
include/Thor/: Animation.hpp  Config.hpp  Graphics.hpp  Input.hpp  Math.hpp  Particles.hpp  Resources.hpp  Shapes.hpp  Time.hpp  Vectors.hpp
include/Utility/: Cursor.hh  Graphic.hh  Physic.hh
rsrc/: client.ini  server.ini
server/include/: AGameServer.hh
server/src/: AGameServer.cpp  server.cpp
src/: Background.cpp  KeyBinding.cpp  MainMenu.cpp  ServerMenu.cpp  Setting.cpp  StatusBar.cpp  Test.cpp  Titlebar.cpp  client.cpp  jag.cpp
src/Client/: About.cpp  Background.cpp  GameLayer.cpp  GameManager.cpp  InputLayer.cpp  MainMenu.cpp  MainMenuItem.cpp  Multimedia.cpp  ServerMenu.cpp  StatusBar.cpp  Test.cpp  Titlebar.cpp  client.cpp
src/GUI/: Action.cpp  ChatBox.cpp  CheckBox.cpp  Console.cpp  Container.cpp  Drawable.cpp  DrawableManager.cpp  EventCallback.cpp  EventManager.cpp  GameManager.cpp  HorizontalMenu.cpp  Input.cpp  Item.cpp  Layer.cpp  ListBox.cpp  ListItem.cpp  Menu.cpp  MessageBox.cpp  ModalMessageBox.cpp  Screen.cpp  Scroller.cpp  Sprite.cpp  String.cpp  StringArea.cpp  Table.cpp  Text.cpp  Tooltip.cpp  VerticalMenu.cpp  jag.cpp
src/Network/: APlayer.cpp  Client.cpp  Network.cpp  ProtocoledPacket.cpp
src/RudeConfig/: ConfigImpl.cpp  ParserJuly2004.cpp  Writer.cpp
src/Screen/: HorizontalMenu.cpp  Item.cpp  Layer.cpp  Menu.cpp  Screen.cpp  Text.cpp
src/Server/: server.cpp
src/System/: System.cpp
src/Thor/: Affectors.cpp  CallbackTimer.cpp  ColorAnimation.cpp  ColorGradient.cpp  Connection.cpp  Emitters.cpp  FadeAnimation.cpp  FrameAnimation.cpp  Particle.cpp  ParticleSystem.cpp  Random.cpp  StopWatch.cpp  Timer.cpp  Triangulation.cpp  Trigonometry.cpp
src/Unix/: Screen.cpp  Unix.cpp
src/Utility/: Cursor.cpp  Graphic.cpp  Physic.cpp
src/Win32/: Screen.cpp  Win32.cpp
test/: CMakeLists.txt  Makefile  PSManager.cpp  PSManager.hh  b2Separator.cpp  b2Separator.hh  box2d.cpp  ping.cpp  universe.frag
test/include/: Network.hh  plugin.hh
test/network/: Network.cpp
test/plugin/: plugin.cpp
test/src/: Network.hh  client.cpp
(+87 files in other folders)
